--- a/blog.html
+++ b/blog.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <link rel="stylesheet" href="Assets/Styles/style.css">
     <link rel="stylesheet" href="Assets/Styles/grid.css">
 </head>
 
 <body >
-    <div class="container">
-        <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
+    <nav class="container">
         <div class="row">
-            <img class="image" src="Assets/Images/LogoBB.png" alt="Logo">
+            <a href="/">
+                <img class="image" src="Assets/Images/LogoBB.png" alt="Logo">
+            </a>
             <ul class="col">
-                <li><a class="button" href="home.html">Home</a></li>
+                <li><a class="button" href="/">Home</a></li>
                 <li><a class="button" href="about.html">About</a></li>
                 <li><a class="active" href="blog.html">Blog</a></li>
                 <li><a class="button" href="favourites.html">Favourites</a></li>
                 <li><a class="button" href="quizzes.html">Quizzes</a></li>
             </ul>
         </div>
+    </nav>
 
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="row-of-buttons">
@@ -43,6 +47,10 @@
             </div>
         </div>
     </div>
+
+    <a href="quizzes.html">
+        <img src="Assets/Images/LogoBB.png" alt="">
+    </a>
 
 </body>
 </html>
