--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div class="row">
         <img class= "image" src="Assets/Images/LogoBB.png" alt="Logo">
         <ul  class="col">
-            <li><a class="button" href="home.html">Home</a></li>
+            <li><a class="button" href="/">Home</a></li>
             <li><a class="active" href="about.html">About</a></li>
             <li><a class="button" href="blog.html">Blog</a></li>
             <li><a class="button" href="favourites.html">Favourites</a></li>
