--- a/favourites.html
+++ b/favourites.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favourites</title>
+    <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <link rel="stylesheet" href="Assets/Styles/style.css">
     <link rel="stylesheet" href="Assets/Styles/grid.css">
 </head>
 
 <body class="container">
-    <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
+
     <div class="row">
-        <img class= "image" src="Assets/Images/LogoBB.png" alt="Logo">
+        <a href="/">
+            <img class="image" src="Assets/Images/LogoBB.png" alt="Logo">
+        </a>
         <ul  class="col">
             <li><a class="button" href="/">Home</a></li>
             <li><a class="button" href="about.html">About</a></li>
