--- a/quizzes.html
+++ b/quizzes.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzes</title>
+    <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
     <link rel="stylesheet" href="Assets/Styles/style.css">
     <link rel="stylesheet" href="Assets/Styles/grid.css">
 </head>
 
 <body class="container">
-    <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet'>
+    
     <div class="row">
-        <img class= "image" src="Assets/Images/LogoBB.png" alt="Logo">
+        <a href="/">
+            <img class="image" src="Assets/Images/LogoBB.png" alt="Logo">
+        </a>
         <ul  class="col">
             <li><a class="button" href="/">Home</a></li>
             <li><a class="button" href="about.html">About</a></li>
@@ -20,5 +23,15 @@
             <li><a class="active" href="quizzes.html">Quizzes</a></li>
         </ul>
     </div>
+
+    <div class="row">
+        <div class="col-12">
+            <h1>Take a Quiz!</h1>
+        </div>
+        <div class="col-12">
+            <h4>Quizzes were not created by me!</h4>
+        </div>
+    </div>
+
 </body>
 </html>
