--- a/tips.html
+++ b/tips.html
@@ -45,21 +45,21 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img class="image3" src="Assets/Images/" alt="Blog 1">
+                <img class="image3" src="Assets/Images/" alt="Tip 1">
                 <div>
                     <a class="quizlink" href=""></a>
                 </div>
             </div>
             
             <div class="col-4">
-                <img class="image3" src="Assets/Images/" alt="Blog 1">
+                <img class="image3" src="Assets/Images/" alt="Tip 2">
                 <div>
                     <a class="quizlink" href=""></a>
                 </div>
             </div>
             
             <div class="col-4">
-                <img class="image3" src="Assets/Images/" alt="Blog 1">
+                <img class="image3" src="Assets/Images/" alt="Tip 3">
                 <div>
                     <a class="quizlink" href=""></a>
                 </div>
