lists are annoyinggg

--- a/blog.html
+++ b/blog.html
@@ -45,21 +45,21 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                    <img class="image3" src="Assets/Images/" alt="Blog 1">
+                    <img class="image3" src="Assets/Images/foundationblog1.jpg" alt="Blog 1">
                     <div>
-                        <a class="quizlink" href=""></a>
+                        <a class="quizlink" href="blogpost1.html">How to Avoid a Cakey Base.</a>
                     </div>
                 </div>
                 
                 <div class="col-4">
-                    <img class="image3" src="Assets/Images/" alt="Blog 1">
+                    <img class="image3" src="Assets/Images/beautytrends.png" alt="Blog 2">
                     <div>
-                        <a class="quizlink" href=""></a>
+                        <a class="quizlink" href="blogpost2.html">Makeup Trends I hated and ABSOLUTELY LOVED in 2023</a>
                     </div>
                 </div>
                 
                 <div class="col-4">
-                    <img class="image3" src="Assets/Images/" alt="Blog 1">
+                    <img class="image3" src="Assets/Images/" alt="Blog 3">
                     <div>
                         <a class="quizlink" href=""></a>
                     </div>
