--- a/tips.html
+++ b/tips.html
@@ -51,7 +51,7 @@
                     <li>Find out your undertone. If you want certain shades of makeup to suit you should find out you undertone to see which shades match you best. A great way to do this is by either using the vein method or visiting a specialist.</li>
                     <li>Apply blush according to your face shape. Girly pop you don’t look terrible in blush you just don’t know which blush placement is best for your face. If you figure out your face shape you can find various diagrams online explaining which blush placement is best for you.</li>
                     <li>Another blush tip. If you want your blush to not be so intense then mix some in your concealer on the back of your hand. Trust me it will make your blush look natural.</li>
-                    <li></li>
+                    <li>Final tip but eyeshadow can be used for anything whether it be the cheeks, the lips or even the brows. You just need to learn methods on how to use it to your advantage plus it’s a money saver.</li>
                 </ol>
         </div>
     </div>
