--- a/blog.html
+++ b/blog.html
@@ -59,9 +59,9 @@
                 </div>
                 
                 <div class="col-4">
-                    <img class="image3" src="Assets/Images/" alt="Blog 3">
+                    <img class="image3" src="Assets/Images/favmakeup.jpg" alt="Blog 3">
                     <div>
-                        <a class="quizlink" href=""></a>
+                        <a class="quizlink" href="blogpost3.html">Here are my Favourite Purchases of 2023!</a>
                     </div>
                 </div>
                 
