--- a/blogpost2.html
+++ b/blogpost2.html
@@ -47,15 +47,27 @@
                 <div class="col-12">
                     <p>In honour of the new year here is a list of trend I loved and hated in the year of 2023. Now that it’s 2024 I hope we can look forward to some amazing makeup trend and leave the ones I disliked behind.</p>
                     <p>Disclaimer: Doesn’t mean I don’t like these shouldn’t mean that you should stop doing them if you like them then you should keep liking them.</p>
+                    <div class="col">
                     <p>Let’s start off with the one I personally hated:</p>
                     <ol>
                         <li>Soap Brows: These kind of brows are a hit or a miss with me. Sometimes it suits some people and others it just downright looks bad.</li>
                         <li>Clean Girl Makeup: Although to some extent I liked this I quickly grew bored of this makeup style and honestly it’s lacking that creativity I love in makeup so it lowkey sucks.</li>
                         <li>Pink Under eyes: I just don’t think these would look good in real life besides camera. So yeah nice on camera a little whack in person.</li>
                         <li>Overlining Lips: The same goes for overlined lips, nice on camera not so nice in person.</li>
-                        <li></li>
-                        <li></li>
+                        <li>Matte lipstick: Please I cant stand the butthole lips anymore plus its so drying.</li>
+                        <li>Food Named Makeup Styles: This was real cute at first but later turned annoying. Like yes I enjoyed the cherry cola lips and Latte makeup trends that came out of it but the moment blueberry milk nails became a thing I was over it.</li>
                     </ol>
-
+                </div>
+                <div class="col">
+                    <p>Now the ones I personally loved:</p>
+                    <ol>
+                        <li>Douyin/Xiaohongshu Makeup: I love Glitter and this makeup style does not disappoint. Its cute, colourful and fun.</li>
+                        <li>Graphic Liner: Absolutely stunning and pretty Graphic liner is absolutely *chefs kiss* especially if it is with chromes. Graphic liner elevates any makeup look.</li>
+                        <li>Lip gloss: As a victim of the 2016 Matte craze im so glad we shifted to lipgloss my lips have thanked me since then. Plus gloss is way more fun it can be sparkly, sheer, pigmented and etc what else could one possibly want.</li>
+                        <li>Glitter and Chromes: Glitter and Chromes are just so fun to play with eye looks especially with the rise of makeup styles like rockstar makeup and douyin.</li>
+                        <li>Maximalist Makeup: Love or hate it but Maximalist Makeup is way more fun and I prefer it over clean girl anytime. It fun, expressive and even spontaneous.</li>
+                        <li>Ombre Lips: As someone who has a brown skin tone ombre lips are a lifesaver for me especially if someone gifts me the ashiest shade of lipstick ever. A brown and nude lip combo can be any girl's best friend.</li>
+                    </ol>
+                </div>
                 </div>
             </div>
