--- a/blogpost3.html
+++ b/blogpost3.html
@@ -37,34 +37,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>Blog Post 1</h1>
+                    <h1>Blog Post 3</h1>
                 </div>
 
                 <div class="col-12">
-                    <h3>How to Avoid a Cakey Base.</h3>
+                    <h3>Here are my Favourite Purchases of 2023!</h3>
                 </div>
 
-                <div class="col-12">
-                        <p>Your makeup base is an integral part of your makeup routine and if done wrong can ruin your whole look. Imagine putting in all that work only to be screwed over moments later, I know right the nerve. This is why I have compiled this 5 step routine to achieve a flawless base that will never fail.</p>
-
-                        <p>First Step:</p>
-                        <p>Moisturize your skin, you should always make sure you prep your skin before you put on foundation and when you do please let your skin absorb the moisturiser too for at least 20-30 minutes.</p>
-
-                        <p>Second Step:</p>
-                        <p>Prime your face. Although I don’t think this step is essential it might help you in making your base flawless. Find primers that work well with your skin or else a gripping primer(my personal favourite). Some primers I recommend are the:</p>
-
-                        <p>a.   Prime Focus Hydrating Primer by Wet n Wild</p>
-                        <p>b.	Power Grip Primer by ELF</p>
-                        <p>c.	Fix and Last Makeup Gripping Jelly Primer by Essence</p>
-
-                        <p>Third Step:</p>
-                        <p>Don’t Squirt/apply the foundation directly on your skin this youre just going to have way too much product. Instead put your foundation on the back of your hand and apply on section of your face with your fingers. After you’ve done that go in with your wet sponge and blend it out. On another note try to apply less foundation around the eyes I will elaborate on this in the next step.</p>
-
-                        <p>Fourth Step:</p>
-                        <p>Conceal lightly around the eyes and find a concealer that wont screw you over with fine lines. The reason I said you should put less foundation around the eyes was so you wound have layers on layers on product that would sink into fine lines. On another note though if you want a concealer test in the spot in between your thumb and index finger this will help you see how the concealer behaves with fine lines.</p>
-
-                        <p>Last and final Step:</p>
-                        <p>Use powder if you have oily skin and setting spray if you’re dry and please set your powder with a powder puff they’re so much better at distributing product.</p>
-                    
+                <div class="col">
+                    <ol>
+                        <li>Clinique Black Honey: Suits every skin tone looks absolutely gorgeous on the lips. They make my ashy lips look nice and gorgeous.</li>
+                        <li>Lottie London Diamond Shine: Absolutely Glittery and gorgeous on the cheeks and eyes my favourite shade is rose gold.</li>
+                        <li>NYX Butter Glosses: These come in every colour and are so comfortable on the lips.</li>
+                        <li>Flormar Lip Glaze: Super Glossy and gorgeous people sleep on these way too much.</li>
+                        <li>Essence Translucent Powder: Keeps makeup in place during those summer months and for a cheap price.</li>
+                        <li>Essence Lash princess: For a drugstore lash product it holds up through the day.</li>
+                        <li>Body Shop Sheer tint: Gorgeous colours and look amazing on everyone. </li>
+                        <li>Relove Lip oil: A good Lip oil for its cheap price and the flavours I recommend popping by lucy and getting yourself one.</li>
+                        <li>Technic Ibiza Palette: Buttery and Pigmented shades. You'll have every colour you'd ever need for various colourful eyelooks. If you're not a fan of bright bold colours though I recommend looking at technics other palettes as they are great quality.</li>
+                        <li>Revolution Earth Sign Palette: Got this as a gift and I love it. Perfect for zodiac fanatics like me and the colour story screams earth sign. Perfect for the autumn/spring months.</li>
+                    </ol>
                 </div>
             </div>
