--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     
-    <form action="mailto:info@BeautyBloom.com" method="post" enctype="text/plain" class="contact-form">
+    <form action= "mailto:mikea.montebello@gmail.com" method="post" enctype="text/plain" class="contact-form">
         <div class="container">
             <div class="row">
                 <div class="col-12">
