--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                 <div class="col-4">
                     <img class="image3" src="Assets/Images/beautytrends.png" alt="Blog 2">
                     <div>
-                        <a class="quizlink" href="blogpost2.html">Makeup Trends I hated and ABSOLUTELY LOVED in 2023</a>
+                        <a class="quizlink" href="blogpost2.html">Makeup Trends I Hated and ABSOLUTELY LOVED in 2023</a>
                     </div>
                 </div>
                 
