hopefully all done yay

--- a/blogpost3.html
+++ b/blogpost3.html
@@ -34,7 +34,6 @@
             </div>
         </div>
         
-        <div class="container">
             <div class="row">
                 <div class="col-12">
                     <h1>Blog Post 3</h1>
@@ -59,3 +58,6 @@
                     </ol>
                 </div>
             </div>
+        </div>
+    </body>
+    </html>
