--- a/rec.html
+++ b/rec.html
@@ -80,7 +80,7 @@
             <div class="col-4">
                 <img class="image3" src="Assets/Images/wetnwildpallette.jpg" alt="Wet n Wild Eyeshadow Palette-Heart and Sole">
                 <div>
-                    <a class="quizlink" href="https://www.wetnwildbeauty.com/product/color-icon-10-pan-palette/?wccp_component_selection[1665477762]=3848">Wet n Wild Eyeshadow Palette-Heart and Sole</a>
+                    <a class="quizlink" href="https://www.wetnwildbeauty.com/product/color-icon-10-pan-palette-heart-sol/">Wet n Wild Eyeshadow Palette-Heart and Sole</a>
                 </div>
             </div>
         </div>
