just a word change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     
     <div class="row">
-        <h1 class="col-11" >Hello! I created Beauty Bloom for make up lovers and make up seekers. This website is my personal experience with a blog and a tab just for my favourites with an honest experience. 
+        <h1 class="col-11" >Hello! I created Beauty Bloom for make up lovers and make up seekers. This website is my personal experience with a blog and a tab just for what I recommend with an honest experience. 
         </h1>    
     </div>
     
